# dispatchbox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/rules/: code-style.mdc  git-commands.mdc  markdown.mdc  project-structure.mdc
.github/workflows/: pylint.yml
docs/: BOTTLE_DECORATORS_EXPLANATION.md  DEAD_LETTER_QUEUE.md  HANDLER_DATABASE_ACCESS_ANALYSIS.md  HTTP_FRAMEWORK_ANALYSIS.md  IMPROVEMENTS.md  SQL_QUERY_BUILDER_ANALYSIS.md
docs/plans/: 01_refaktoryzacja_struktury_projektu.md  02_plan_testow_unitowych.md
scripts/: generate_outbox_db.py  generate_outbox_sql.py  outbox_generator.py
sql/: insert.sql  insert_outbox.sql  schema.sql
src/dispatchbox/: __init__.py  cli.py  config.py  handlers.py  http_server.py  models.py  repository.py  supervisor.py  worker.py
tests/: __init__.py  conftest.py  test_cli.py  test_handlers.py  test_http_server.py  test_http_server_dlq.py  test_http_server_integration.py  test_models.py  test_repository.py  test_repository_dlq.py  test_supervisor.py  test_worker.py
