[project]
name = "dispatchbox"
version = "0.1.0"
description = "Outbox pattern worker for PostgreSQL"
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "loguru>=0.7.0",
    "bottle>=0.12.25",
]

[project.optional-dependencies]
dev = [
    "faker>=20.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "requests>=2.31.0",
]

[project.scripts]
dispatchbox = "dispatchbox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.pylint.main]
disable = [
    "R0801",  # duplicate-code (już świadomie wyłączone)
    "C0301",  # line-too-long
    "C0303",  # trailing-whitespace
    "C0305",  # trailing-newlines
    "C0411",  # wrong-import-order
    "C0415",  # import-outside-toplevel
    "R0902",  # too-many-instance-attributes
    "R0913",  # too-many-arguments
    "R0917",  # too-many-positional-arguments
    "R1705",  # no-else-return
    "W0611",  # unused-import
    "W0612",  # unused-variable
    "W0613",  # unused-argument
    "W0621",  # redefined-outer-name
    "W0718",  # broad-exception-caught
    "W0719",  # broad-exception-raised
    "W0212",  # protected-access (w testach)
    "W0143",  # comparison-with-callable
    "W2301",  # unnecessary-ellipsis
    "W0622",  # redefined-builtin
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
]


