[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dispatchbox"]

[project]
name = "dispatchbox"
version = "0.1.0"
description = "Outbox pattern worker for PostgreSQL"
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary>=2.9.0",
    "loguru>=0.7.0",
    "bottle>=0.12.25",
]

[project.optional-dependencies]
dev = [
    "faker>=20.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "requests>=2.31.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",
    "pyright>=1.1.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
dispatchbox = "dispatchbox.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src/dispatchbox --cov-report=term-missing --cov-report=html"
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["I", "F", "E", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["dispatchbox"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-sort-within-sections = true
combine-as-imports = true

[tool.pylint.main]
max-line-length = 120

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "no-member",
    "invalid-name",
    "attribute-defined-outside-init",
    "redefined-outer-name",
    "global-statement",
    "broad-exception-caught",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "no-else-return",
    "unused-import",
    "unused-variable",
    "unused-argument",
    "redefined-builtin",
    "protected-access",
    "duplicate-code",
    "line-too-long",
    "trailing-whitespace",
    "trailing-newlines",
    "wrong-import-order",
    "import-outside-toplevel",
]

[tool.pylint.design]
max-args = 7
max-locals = 20
max-returns = 6
max-branches = 15
max-statements = 50

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/node_modules", ".venv", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedFunction = false
reportUnusedClass = false
reportUnusedVariable = false
pythonVersion = "3.8"
typeCheckingMode = "basic"
